# neural-net-from-scratch

./: .gitignore  AGENTS.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md
reports/: benchmark_report_example.md
src/nnscratch/: __init__.py  benchmark.py  cli.py  data.py  gradcheck.py  layers.py  losses.py  network.py  optim.py  train.py
tests/: test_gradcheck.py  test_layers.py  test_losses.py  test_train.py
